tests/test-files/bad/RepeatedArgument.elm

foo x x = 42

bar x (x, y) = 42
